upload/style/imports/base.css
/****************************************************************/
/* 1. INITIAL SETTINGS */
/****************************************************************/

.pun TABLE, .pun DIV, .pun FORM, .pun P, .pun H1, .pun H2, .pun H3,
.pun H4, .pun H5, .pun PRE, .pun BLOCKQUOTE, .pun UL, .pun OL, .pun LI, .pun DL,
.pun DT, .pun DD, .pun TH, .pun TD, .pun FIELDSET, .pun IMG {
	MARGIN: 0px;
	PADDING: 0px;
	FONT-WEIGHT: normal;
	LIST-STYLE: none;
}

.pun IMG {BORDER: none}

.pun INPUT, .pun SELECT, .pun TEXTAREA, .pun OPTGROUP {MARGIN: 0}

/****************************************************************/
/* 2. STRUCTURAL SETTINGS - VERY IMPORTANT - DO NOT CHANGE */
/****************************************************************/

/* 2.1 Clearing floats and invisible items */
.pun .clearer, .pun .nosize {
	HEIGHT: 0;
	WIDTH: 0;
	LINE-HEIGHT: 0;
	FONT-SIZE: 0;
	OVERFLOW: hidden
}

.pun .clearer, .pun .clearb {CLEAR: both}
.pun .nosize {POSITION: absolute; LEFT: -10000px}

/* 2.2 Overflow settings for posts */

DIV.blockpost DIV.box, DIV.postleft, DIV.postsignature, DIV.postmsg {OVERFLOW: hidden}


/****************************************************************/
/* 3. BUG FIXES - VERY IMPORTANT - DO NOT CHANGE */
/****************************************************************/

/* 3.1 This attempts to eliminate rounding errors in Gecko browsers. */

DIV>DIV>DIV.postfootleft, DIV>DIV>DIV.postfootright {PADDING-TOP: 1px; MARGIN-TOP: -1px}

/* 3.2 This is only visible to IE6 Windows and cures various bugs. Do not alter comments */

/* Begin IE6Win Fix \*/
* HTML .inbox, * HTML .inform, * HTML .pun, * HTML .intd, * HTML .tclcon, * HTML .codebox {HEIGHT: 1px}
/* End of IE6Win Fix */

/* 3.3 This is the equivelant of 3.2 but for IE7. It is visible to other browsers
but does no harm */

/*Begin IE7Win Fix */
.pun, .pun .inbox, .pun .inform, .pun .intd, .pun .tclcon, .pun .codebox {min-height: 1px}
/* End of IE7Win Fix */

/****************************************************************/
/* 4. HIDDEN ELEMENTS */
/****************************************************************/

/* These are hidden in normal display. Add comments to make them visible */

#brdfooter H2, #brdstats H2, #brdstats .conl DT, #brdstats .conr DT,
#modcontrols DT, #searchlinks DT, DIV.postright H3 {
	POSITION: absolute;
	DISPLAY: block;
	OVERFLOW: hidden;
	WIDTH: 1em;
	LEFT: -999em
}

/****************************************************************/
/* 5. BOX CONTAINERS AND FLOATS */
/****************************************************************/

/* 5.1. Setup all left and right content using floats. */

.conr {
	FLOAT: right;
	TEXT-ALIGN: right;
	CLEAR: right;
	WIDTH: 40%
}

.conl {
	FLOAT: left;
	WIDTH: 55%;
	OVERFLOW: hidden;
	WHITE-SPACE: nowrap
}

LABEL.conl {
	WIDTH: auto;
	OVERFLOW: visible;
	MARGIN-RIGHT: 10px
}

/* 5.2 Set up page numbering and posts links */

DIV.linkst .conl, DIV.linksb .conl, DIV.postlinksb .conl {WIDTH:auto; white-space: nowrap}

DIV.linkst .conr, DIV.linksb .conr, DIV.postlinksb .conr {WIDTH:auto; white-space: nowrap}

FORM DIV.linksb .conr {WIDTH: 32em}

/* 5.3 Keep breadcrumbs from shifting to the right when wrapping */
/* TEMP: THis is not needed anymore since the breadcrumbs are now on their own line */
/* .linkst UL, linksb UL, .postlinksb UL {MARGIN-LEFT: 18em} */

DIV.linkst UL, DIV.linksb UL, DIV.postlinksb UL {clear: both; WIDTH: 100%; overflow: hidden}
DIV.linkst UL LI, DIV.linksb UL LI, DIV.postlinksb UL LI {white-space: nowrap}


/* 5.4 Settings for Profile and Admin interface.*/

DIV.block2col {PADDING-BOTTOM: 1px}

DIV.block2col DIV.blockform, DIV.block2col DIV.block, #viewprofile DD {MARGIN-LEFT: 14em}

DIV.blockmenu, #viewprofile DT {
	FLOAT:left;
	WIDTH: 13em
}

#profileavatar IMG {
	FLOAT: right;
	MARGIN-LEFT: 1em
}

#viewprofile DL {FLOAT: left; WIDTH: 100%; OVERFLOW: hidden}

DIV.deletemsg { PADDING-TOP: 5px; PADDING-LEFT: 5px; }

/****************************************************************/
/* 6. TABLE SETUP */
/****************************************************************/

/* 6.1 Table Basic Setup */

.pun TABLE {WIDTH: 100%}

/* 6.2 Fixed Table Setup */

#punindex TABLE, #vf TABLE {TABLE-LAYOUT: fixed}

.tcl {TEXT-ALIGN: left; WIDTH: 50%}

.tc2, .tc3, .tcmod {WIDTH: 9%; TEXT-ALIGN: center}

.tcr {WIDTH: 32%; TEXT-ALIGN: left}

#punsearch #vf .tcl, #punmoderate #vf .tcl {WIDTH: 41%}

#punsearch #vf .tc2 {WIDTH: 18%; TEXT-ALIGN: left}

.tcl, .tcr {OVERFLOW: HIDDEN}

/* 6.3 Other Table Setup */

#users1 .tcl {WIDTH: 40%}

#users1 .tcr {WIDTH: 25%}

#users1 .tc2 {WIDTH: 25%; TEXT-ALIGN: left}

#users1 .tc3 {WIDTH: 10%; TEXT-ALIGN: center}

#debug .tcl {WIDTH: 10%}
#debug .tcr {WIDTH: 90%; WHITE-SPACE: normal}

#punindex TD.tcr SPAN.byuser {DISPLAY: block}

#vf .iposted DIV.tclcon {text-indent: -0.65em}

/****************************************************************/
/* 7. VIEWTOPIC SETUP */
/****************************************************************/

/* 7.1 This is the basic structure. */

DIV.postleft, DIV.postfootleft {
	FLOAT:left;
	WIDTH: 18em;
	OVERFLOW: hidden;
	POSITION: relative;
}

DIV.postright, DIV.postfootright {
	BORDER-LEFT-WIDTH: 18em;
	BORDER-LEFT-STYLE: solid
}

DIV.postfootright, P.multidelete {TEXT-ALIGN: right}

DIV.blockpost>DIV>DIV.inbox {PADDING-BOTTOM: 1px}

/* 7.3 This is the div which actually contains the post and is inside .postright */

DIV.postmsg {WIDTH:98%;}
DIV.postmsg P {MARGIN: 0 0 1.5em}
DIV.postmsg UL, DIV.postmsg OL {MARGIN: 0 0 1.5em 0.5em;PADDING-LEFT: 1.5em}
DIV.postmsg OL {MARGIN: 0 0 1.5em 1em}
DIV.postmsg LI UL, DIV.postmsg LI OL {MARGIN-BOTTOM: 0; MARGIN-TOP: 0.5em}
DIV.postmsg UL LI {LIST-STYLE-TYPE: disc}
DIV.postmsg UL LI UL LI {LIST-STYLE-TYPE: circle}
DIV.postmsg OL.decimal LI {LIST-STYLE-TYPE: decimal}
DIV.postmsg OL.alpha LI {LIST-STYLE-TYPE: lower-alpha}

/* 7.4 These items control overflow and scrolling within posts. */

DIV.quotebox blockquote {WIDTH: 100%; OVERFLOW: hidden}
DIV.codebox pre {overflow: auto; width: 100%; padding-bottom: 18px; overflow-y:hidden}
/* Uncomment the following line to activate vertically scrolling codeboxes*/
.pun .codebox pre.vscroll {height: 32em; overflow: auto; overflow-y: auto}

IMG.postimg {max-width: 100%}
A .postimg {max-width: 100%}

/* 7.5 Turn off the poster information column for preview */

#postpreview DIV.postright {BORDER-LEFT: none}

/* 7.6 Create the horizontal line above signatures */

DIV.postsignature HR {
	MARGIN-LEFT: 0px;
	WIDTH: 200px;
	TEXT-ALIGN: left;
	HEIGHT: 1px;
	BORDER:none
}

/* 7.7 Maximum height for search results as posts. Position go to post link */

DIV.searchposts DIV.postmsg {HEIGHT: 8em}
DIV.searchposts DD P {PADDING-TOP: 3em}

/* 7.8 Class for bbcode [u] */

SPAN.bbu {TEXT-DECORATION: underline}

/****************************************************************/
/* 8. LISTS SPECIAL SETTINGS */
/****************************************************************/

/* 8.1 Horizontal display of online list, main navigation menu and breadcrumbs */

#onlinelist DD, #onlinelist DT, #brdmenu LI, DIV.linkst LI, DIV.linksb LI, DIV.postlinksb LI,
DIV.postfootright LI, UL.bblinks LI {
	DISPLAY: inline;
	HEIGHT: 0
}

/* 8.2 Turn on square icon for posterror list */

#posterror UL LI {LIST-STYLE: square inside}

/* 8.3 Right alignment of descriptions in ordinary member view of other members profiles */

#viewprofile DT {TEXT-ALIGN: right}

/****************************************************************/
/* 9. FORM SETTINGS */
/****************************************************************/

/* 9.1 Makes textareas and long text inputs shrink with page */

DIV.txtarea {WIDTH: 75%}

DIV.txtarea TEXTAREA, INPUT.longinput {WIDTH: 100%}

.pun LABEL {DISPLAY: block}

#qjump SELECT {WIDTH: 50%}

/****************************************************************/
/* 10. HELP FILES AND MISC. */
/****************************************************************/

/* 10.1 Put some space between sections of the help file */

#helpfile H2 {MARGIN-TOP: 12px}
#helpfile H5 {MARGIN-LEFT: 48px; PADDING-BOTTOM: 5px}

/* 10.2 Internal padding */

#helpfile DIV.box {PADDING: 10px}

/* 10.3 Other templates */

#punredirect DIV.block, #punmaint DIV.block {MARGIN: 50px 20% 12px 20%}

/* 10.4 Paragraphs and lists */

#helpfile P, #rules-block P {MARGIN: 0 0 0.5em}
#helpfile UL, #helpfile OL, #rules-block UL, #rules-block OL {MARGIN: 0 0 1em 0.5em; PADDING-LEFT: 1.5em}
#helpfile OL, #rules-block OL {MARGIN: 0 0 1em 1em}
#helpfile UL LI, #rules-block UL LI {LIST-STYLE-TYPE: disc}
#helpfile OL.decimal LI, #rules-block OL.decimal LI {LIST-STYLE-TYPE: decimal}
#helpfile OL.alpha LI, #rules-block OL.alpha LI {LIST-STYLE-TYPE: lower-alpha}

